Regression: World setup with two sky textures is lacking proper direct light sampling on the suns - 3.5+ #106293

Closed
opened 2023-03-30 08:17:57 +02:00 by Test-Adre · 2 comments

System Information
Operating system: Windows 11
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2

Blender Version
Broken: (version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff1, type: release)

Worked: (3.4.1)

Mixing two sky textures with two suns works differently in 3.4 and 3.5. Please see the attached files: BLEND and two render files showing the difference.

Exact steps for others to reproduce the error
Open the attached BLEND file in 3.4.1 and render. Then do the same in 3.5.

**System Information** Operating system: Windows 11 Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 **Blender Version** Broken: (version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b, type: release) Worked: (3.4.1) **Mixing two sky textures with two suns works differently in 3.4 and 3.5. Please see the attached files: BLEND and two render files showing the difference.** **Exact steps for others to reproduce the error** Open the attached BLEND file in 3.4.1 and render. Then do the same in 3.5.
Test-Adre added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-03-30 08:17:58 +02:00
Member

The main difference is the noise. In Blender 3.5, this multi sky texture setup has much more noise (due to lack of proper direct light sampling for both suns). And this leads to other issues with the adaptive sampling.

It should also be noted that the user isn't using the new Light Tree. And enabling it doesn't fix this issue either.

Quick testing reveals the issue is related to the modifications made to the sky texture by Jeffery Liu in 05bdef7ce6

Since Jeffery seems to in-active, I am tagging @brecht and @weizhen to look into this issue if possible.

The main difference is the noise. In Blender 3.5, this multi sky texture setup has much more noise (due to lack of proper direct light sampling for both suns). And this leads to other issues with the adaptive sampling. It should also be noted that the user isn't using the new Light Tree. And enabling it doesn't fix this issue either. Quick testing reveals the issue is related to the modifications made to the sky texture by Jeffery Liu in 05bdef7ce64fe3125b95d72d80f1f4f60c2b127 Since Jeffery seems to in-active, I am tagging @brecht and @weizhen to look into this issue if possible.
Alaska changed title from World setup with two sky textures and two suns produces different results in 3.4.1 and 3.5 to Regression: World setup with two sky textures is lacking proper direct light sampling on the suns - 3.5+ 2023-03-30 12:04:40 +02:00
Brecht Van Lommel added
Module
Render & Cycles
and removed
Interest
Render & Cycles
labels 2023-03-31 16:31:02 +02:00

What happened is that we removed the sun from the importance map, since the dedicated sun importance sampling is supposed to be better at it and doing both is worse. The issue is that the dedicated sampling doesn't support multiple suns.

What happened is that we removed the sun from the importance map, since the dedicated sun importance sampling is supposed to be better at it and doing both is worse. The issue is that the dedicated sampling doesn't support multiple suns.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-17 17:31:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106293
No description provided.