Fix #106293: Cycles importance sampling with multiple suns works poorly

Keep sun in importance map in this case, as we do not use special sun
importance sampling in this case.